[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "HPCdocs"
authors = [{name = "PabloGM", email = "PabloGM@HPCdocs"}]
dynamic = ["version", "description"]

[project.optianl-dependecies]

doc = [
    "sphinx~=7.2.5",
]

packages = [
    { include = "HPdocs" },
]
